syntax = "proto3";

package com.netifi.acmeair;

import "google/protobuf/empty.proto";

option java_package = "com.netifi.acmeair";
option java_outer_classname = "FlightLoaderProto";
option java_multiple_files = true;

message LoadFlightsResponse {
    int64 durationMillis = 1;
}

message DropFlightsResponse {
    int64 durationMillis = 1;
}

message LoadFlightsRequest {
    string resource = 1;
}

service FlightLoaderService {
    rpc LoadFlights (LoadFlightsRequest) returns (LoadFlightsResponse) {}

    rpc LoadDefaultFlights (google.protobuf.Empty) returns (LoadFlightsResponse) {}

    rpc DropFlights (google.protobuf.Empty) returns (DropFlightsResponse) {}
}